[package]
name = "tonic-trivial"
version = "0.1.0"
authors = ["adamrk <ark.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
tokio-serde = { version = "0.6", features = ["json"] }
tonic = { version = "0.3", features = ["prost"] }
prost = "0.6"

[build-dependencies]
tonic-build = "0.3"