[package]
name = "example"
version = "0.1.0"
authors = ["Adam Bratschi-Kaye <ark.email@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = [ "full" ] }
tokio-stream = { version = "0.1.0", features = [ "net" ] }
tonic = "0.8.3"
tonic-rpc = { path = "../tonic-rpc", features = ["json"] }
