[package]
name = "tonic-rpc-macro"
version = "0.1.0"
authors = ["adamrk <ark.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
itertools = "0.10"
syn = { version = "1.0", features = ["full"] }
tonic-build = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
