[package]
name = "tonic-rpc-macro"
version = "0.1.0"
authors = ["Adam Bratschi-Kaye <ark.email@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/adamrk/tonic-rpc"
homepage = "https://github.com/adamrk/tonic-rpc"
description = """
Core macro for tonic-rpc.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
itertools = "0.10"
syn = { version = "1.0", features = ["full"] }
tonic-build = "0.7"
proc-macro2 = "1.0"
quote = "1.0"
