[package]
name = "tonic-rpc-macro"
version = "0.2.1"
authors = ["Adam Bratschi-Kaye <ark.email@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/adamrk/tonic-rpc"
homepage = "https://github.com/adamrk/tonic-rpc"
description = """
Core macro for tonic-rpc.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.4.1"
itertools = "0.10.5"
syn = { version = "1.0.107", features = ["full"] }
tonic-build = "0.8.4"
proc-macro2 = "1.0.51"
quote = "1.0.23"
