[package]
name = "tonic-rpc"
version = "0.1.0"
authors = ["Adam Bratschi-Kaye <ark.email@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/adamrk/tonic-rpc"
homepage = "https://github.com/adamrk/tonic-rpc"
description = """
Define RPC using native Rust types using tonic.
"""
readme = "../README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["rpc", "async", "json", "bincode", "messagepack"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
bytes = "1.0"
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
tonic = "0.4"
tonic-rpc-macro = { path = "../tonic-rpc-macro" }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.4", features = [ "full" ] }
tokio-stream = { version = "0.1", features = [ "net" ] }

[build-dependencies]
tonic-build = "0.4"
