[package]
name = "tonic-rpc"
version = "0.1.0"
authors = ["Adam Bratschi-Kaye <ark.email@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/adamrk/tonic-rpc"
homepage = "https://github.com/adamrk/tonic-rpc"
description = """
RPC library that uses native Rust types and is built on tonic.
"""
readme = "../README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["rpc", "async", "json", "bincode", "messagepack"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
json = ["serde_json"]
cbor = ["serde_cbor"]
messagepack = ["rmp-serde"]

[dependencies]
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.4"
tonic-rpc-macro = { path = "../tonic-rpc-macro" }

# optional codecs
bincode = { version = "1.3", optional = true }
rmp-serde = { version = "0.15", optional = true }
serde_json = { version = "1.0", optional = true }
serde_cbor = { version = "0.11", optional = true }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.4", features = [ "full" ] }
tokio-stream = { version = "0.1", features = [ "net" ] }

[build-dependencies]
tonic-build = "0.4"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
